# gestao-app

app/: .env  README.md  check-tauri-setup.ps1  env.example.txt  gerar-icones-validos.cjs  gerar-icones.cjs  gerar-icones.js  index.html  package-lock.json  package.json  vite.config.js
app/src/: App.css  App.jsx  index.css
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/icons/: .gitkeep  icon.icns
app/src/Layout/: Layout.css  Layout.jsx
app/src/components/ClearDataButton/: ClearDataButton.css  ClearDataButton.jsx
app/src/components/ConfigModal/: ConfigModal.css  ConfigModal.jsx
app/src/components/ConfirmModal/: ConfirmModal.css  ConfirmModal.jsx  index.js
app/src/components/ConfirmModalWithPassword/: ConfirmModalWithPassword.css  ConfirmModalWithPassword.jsx
app/src/components/EmptyState/: EmptyState.css  EmptyState.jsx
app/src/components/ErrorBoundary/: ErrorBoundary.jsx
app/src/components/Header/: Header.css  Header.jsx
app/src/components/LoadingState/: LoadingState.css  LoadingState.jsx
app/src/components/Notification/: Notification.css  Notification.jsx
app/src/components/NotificationContainer/: NotificationContainer.css  NotificationContainer.jsx
app/src/config/: routes.js
app/src/contexts/: AuthContext.jsx  ConfigContext.jsx  LoadingContext.jsx  NotificationContext.jsx  UploadContext.jsx
app/src/hooks/: useApiCache.js  useDebounce.js  useDebouncedValue.js  usePedidosRetidos.js  usePersistentState.js  useScrollToTop.js
app/src/services/: api.js
app/src/utils/: api-headers.js  api-utils.js  tauri-utils.js
(+312 files in other folders)
